<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.RandomDishFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/srl_random_dish">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sv_random_main"
        android:fillViewport="true"
        android:scrollbars="none"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/image_random_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_random_dish"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"
                    android:contentDescription="@string/dish_details_image_description"
                    android:scaleType="centerCrop"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/iv_random_add_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_50sdp"
                    app:cardElevation="@dimen/_10sdp"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_gravity="top|end"
                    >
                    <ImageView
                        android:id="@+id/iv_random_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/ic_unsaved"
                        android:contentDescription="@string/favorite_icon"/>

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_random_frame_layout"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/blue_grey_900"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:text="Dish Title" />

            <TextView
                android:id="@+id/tv_random_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"
                tools:text="Type" />

            <TextView
                android:id="@+id/tv_random_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_random_type"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/grey_500"
                android:textSize="@dimen/_14sdp"
                tools:text="Category" />

            <TextView
                android:id="@+id/tv_random_ingredients_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_random_category"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/ingredients_label"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/blue_grey_900"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_900"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_below="@id/tv_random_ingredients_label"
                android:textSize="@dimen/_14sdp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/tv__random_cooking_direction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ingredients"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/lbl_direction_to_cook"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/blue_grey_900"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_random_cooking_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_900"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_below="@id/tv__random_cooking_direction_label"
                android:textSize="@dimen/_14sdp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/tv_random_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_random_cooking_direction"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/grey_500"
                tools:text="@string/lbl_estimate_cooking_time" />
        </RelativeLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

